# overmind

./: .env.example  .gitignore  BENCHMARK.md  Makefile  OVERMIND_SIGNING_PUBKEY.txt  PROGRESS.md  README.md  REVIEW_FINDINGS_evidence_subsystem.md  RUNBOOK.md  SENTINEL_TRIAGE_2026-05-07.md  VERIFYING.md  pyproject.toml  review-findings-session-2026-05-06.md  review-findings.md
config/: policies.yaml  roots.yaml  runners.yaml  verification_profiles.yaml
dashboard/: index.html
data/: bayesian_recheck.txt  cardiooracle_check.txt  dta70_recheck.txt  evi_only.txt  fail_reject_2026-05-04.txt  fatiha_recheck.txt  final_4_recheck.txt  final_metasprint_check.txt  final_r_baselines.txt  final_recheck_2026-05-04b.txt  final_sweep_2026-05-04.txt  finrenone_only.txt  hfpef_ipd_recheck.txt  kmcurve_recheck.txt  new_baselines_verify.txt  nma_only.txt  node_recheck.txt  rct_only.txt  session7_recheck.txt  session8_recheck.txt  session8b_recheck.txt  stability_state.json  superapp_only.txt  timeout_recheck.txt  unskip_recheck_2026-05-04.txt  unverified_2026-05-04.txt
docs/: AI-FRONTIER-ADOPTION.md  AI-FRONTIER-QUICKWINS-IMPL.md  CLUSTER.md  FRONTIER-AGENT-SCAN-2026-06.md  FRONTIER-CLOSING-PROGRESS.md  ROADMAP-v4.md  SYSTEMS-BENCHMARK-VS-FRONTIER.md  judge-engines.md
evals/: README.md  __init__.py  cluster_delta_skip.py  cluster_dispatch.py  common.py  contract_impact.py  engine_routing.py  judge_cot_goldenset.py  judge_masterkey.py  memory_recall.py  memory_retraction.py  quorum_decorrelation.py  run_all.py  sandbox_policy.py  specbench_style.py  verdict_tracing.py
overmind/: __init__.py  cli.py  config.py  infra_invariants.py  main.py  redaction.py  subprocess_utils.py
overmind.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: consolidate_memory.bat  create_baselines.py  export_to_inspect.py  generate_dashboard.py  install_overmind_task.ps1  morning_watchdog.py  nightly_verify.bat  nightly_verify.py
tests/: conftest.py  e2e_full_test.py
wiki/: CHANGELOG.md  INDEX.md  PROCEDURES.md  SKILLS.json  advanced-nma-pooling-090cb3c6.md  advanced-nma-pooling-6e3c8bdb.md  africa-tb-atlas-0b748b0b.md  allmeta-cd17b621.md  allmeta-pilot-9dbb995c.md  arac-2b2bdcce.md  asreview-5star-8400d8d7.md  asreview-5star-e9fe8316.md  bayesianma-240f4a74.md  cardio-ctgov-living-meta-portfolio-10874.md  cardiooracle-6cb36757.md  cbamm-0820ec88.md  cbamm-c5df0bd2.md  componentnma-5d7f067c.md  cora-bee5b9ac.md  ctgov-registry-survival-92f80fb3.md  ctgov-search-strategies-b6ea3be1.md  ctgov-search-strategies-backup-20260114-.md  ctgov-search-strategies-f03340e5.md  dataextractor-9c5488b5.md  dataextractor-9f654f31.md  dataextractor-backup-20260114-110706-2be.md  dataextractor-backup-20260114-110706-e7f.md  denominator-calibrated-living-nma-bfb71b.md  denominator-calibrated-living-nma-c76e28.md  dta70-4451dfb5.md  dta70-4b170dbc.md  esc-acs-living-meta-dab41ea9.md  evidence-inference-4c874004.md  evidenceforecast-970b7b59.md  evidenceoracle-b78b3965.md  experimental-meta-analysis-37d6e8a1.md  fatiha-project-930cf9dd.md  fatiha-project-a8ec1065.md  (+71 more)
(+945 files in other folders)
