[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "overmind"
version = "3.1.0"
description = "Local evidence-first orchestration for terminal coding agents."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "psutil>=5.9",
  "PyYAML>=6.0",
  # Ed25519 is the default bundle signer (overmind/verification/signers.py).
  # Required on every install — without it the signer path fails closed and
  # the Ed25519 signer tests error on a fresh machine. Floor 41.0 = modern,
  # stable Ed25519 + serialization API.
  "cryptography>=41.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-timeout>=2.0",
]
embeddings = [
  "sentence-transformers>=2.2",
]
# Keyless OIDC signing (CI/release attestation) — overmind/verification/signers.py.
# Lazy-imported; only needed when OVERMIND_SIGN_METHOD=sigstore.
sigstore = [
  "sigstore>=2.0",
]
# Headless browser smoke checks — overmind/verification/browser_checks.py.
# Lazy-imported; only needed when a browser verification profile runs.
browser = [
  "selenium>=4.0",
]
# Cochrane .rda gold-corpus reproduction — overmind/intelligence/gold_benchmark.py.
# Guarded import; only needed to run the published-corpus benchmark.
benchmark = [
  "pyreadr>=0.4",
  "pandas>=1.5",
]

[project.scripts]
overmind = "overmind.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["overmind*"]

[tool.setuptools.package-data]
overmind = ["prompts/*.txt", "evidence/data/*.jsonl", "evidence/data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]

